Fix empty ping list indicator being clipped

--- a/resources/public/style.css
+++ b/resources/public/style.css
@@ -1647,7 +1647,6 @@ ul.chat-history, ul.chatban-history {
 
 .popup .pings-list:empty::before {
     content: "No pings here";
-    position: absolute;
     display: block;
     text-align: center;
     color: #8c8c8c;
